--- a/app/templates/create-masterclass/masterclass-content/masterclass-content-1.html
+++ b/app/templates/create-masterclass/masterclass-content/masterclass-content-1.html
@@ -7,7 +7,7 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <form action="/create-masterclass/existing" method="get" novalidate>
+        <form action="/choose-content/new-or-existing" method="get" novalidate>
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
@@ -17,7 +17,7 @@
                 </h1>
               </legend>
               <span id="sign-in-hint" class="govuk-hint">
-                Select one option. <a href="https://www.gov.uk/government/collections/digital-data-and-technology-profession-capability-framework#data-job-family">Find out more about the job families</a>
+                <a href="https://www.gov.uk/government/collections/digital-data-and-technology-profession-capability-framework#data-job-family">Find out more about the job families</a>
               </span>
               <div class="govuk-radios">
                 <div class="govuk-radios__item">
