--- a/app/templates/create-masterclass/content/choose-ddat-family.html
+++ b/app/templates/create-masterclass/content/choose-ddat-family.html
@@ -7,7 +7,7 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <form action="/choose-content/new-or-existing" method="get" novalidate>
+        <form action="/choose-content" method="post" novalidate>
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
