Update DDaT job family link text

--- a/app/templates/create-masterclass/content/choose-ddat-family.html
+++ b/app/templates/create-masterclass/content/choose-ddat-family.html
@@ -17,7 +17,7 @@
                 </h1>
               </legend>
               <span id="DDaT-job-family-link" class="govuk-hint">
-                <a href="https://www.gov.uk/government/collections/digital-data-and-technology-profession-capability-framework#data-job-family">Find out more about the job families</a>
+                <a href="https://www.gov.uk/government/collections/digital-data-and-technology-profession-capability-framework#data-job-family">Find out more about the DDaT job families</a>
               </span>
               {% include 'partials/ddat-job-family-radios.html' %}
             </fieldset>
