--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,12 +31,12 @@
                         </a>
                     </li>
                     <li class="govuk-header__navigation-item">
-                        <a class="govuk-header__link" href="#2">
+                        <a class="govuk-header__link" href="/">
                             Upcoming
                         </a>
                     </li>
                     <li class="govuk-header__navigation-item">
-                        <a class="govuk-header__link" href="#3">
+                        <a class="govuk-header__link" href="{{ url_for('main_bp.my_masterclasses') }}">
                             My masterclasses
                         </a>
                     </li>
@@ -44,7 +44,7 @@
                         {% if current_user.is_anonymous %}
                         <a class="govuk-header__link" href="{{ url_for('main_bp.login') }}">
                             Login
-                        </a> 
+                        </a>
                         {% else %}
                         <a class="govuk-header__link" href="{{ url_for('main_bp.logout') }}">
                             Logout
