--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,15 +11,11 @@
 <header class="govuk-header " role="banner" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
         <div class="govuk-header__logo">
-            <a href="#" class="govuk-header__link govuk-header__link--homepage">
                 <span class="govuk-header__logotype">
-                    <a href="{{ url_for('main_bp.index') }}" class='govuk-header__link'>
-                      <span class="govuk-header__logotype-text">
+                    <a href="{{ url_for('main_bp.index') }}" class='govuk-header__link govuk-header__link--service-name' style="margin-bottom: 0px;">
                       Masterclasses 
-                      </span>
                     </a>
                 </span>
-            </a>
         </div>
         <div align="right" class="govuk-header__content">
             <button type="button" role="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide Top Level Navigation">Menu</button>
