--- a/app/templates/create-masterclass/location/choose-location-type.html
+++ b/app/templates/create-masterclass/location/choose-location-type.html
@@ -1,33 +1,52 @@
 {% set back_url=url_for("main_bp.index") %}
 {% extends "form-page-base.html" %}
 {% block main_content %}
-  <form action="/create-masterclass/location/type" method="post" novalidate>
-
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <h1 class="govuk-fieldset__heading">
-            Will your masterclass be online or in person?
-          </h1>
-        </legend>
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="online" name="location-type" type="radio" value="online">
-            <label class="govuk-label govuk-radios__label" for="online">
-              Online
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="in-person" name="location-type" type="radio" value="in person">
-            <label class="govuk-label govuk-radios__label" for="in-person">
-              In person
-            </label>
-          </div>
-        </div>
-        </br>
-        <button class="govuk-button" data-module="govuk-button">
-          Continue
-        </button>
+<form action="/create-masterclass/location/type" method="post">
+  {% if validation_error %}
+  <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
+    data-module="govuk-error-summary">
+    <h2 class="govuk-error-summary__title" id="error-summary-title">
+      There is a problem
+    </h2>
+    <div class="govuk-error-summary__body">
+      <ul class="govuk-list govuk-error-summary__list">
+        <li>
+          <a href="#online">Select a location type for your masterclass</a>
+        </li>
+      </ul>
     </div>
-  </form>
+  </div>
+  {% endif %}
+  <div class="govuk-form-group {% if validation_error %}govuk-form-group--error{% endif %}">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+        <h1 class="govuk-fieldset__heading">
+          Will your masterclass be online or in person?
+        </h1>
+      </legend>
+      {% if validation_error %}
+      <span id="masterclass-type-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span> Select a location type for your masterclass
+      </span>
+      {% endif %}
+      <div class="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="online" name="location-type" type="radio" value="online">
+          <label class="govuk-label govuk-radios__label" for="online">
+            Online
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="in-person" name="location-type" type="radio" value="in person">
+          <label class="govuk-label govuk-radios__label" for="in-person">
+            In person
+          </label>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+  <button class="govuk-button" data-module="govuk-button">
+    Continue
+  </button>
+</form>
 {% endblock %}
