--- a/app/templates/create-masterclass/content/new-or-existing.html
+++ b/app/templates/create-masterclass/content/new-or-existing.html
@@ -8,13 +8,33 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <form action="/create-masterclass/content/new-or-existing" method="post" novalidate>
-          <div class="govuk-form-group">
+          {% if validation_error %}
+          <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
+            data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+              There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+              <ul class="govuk-list govuk-error-summary__list">
+                <li>
+                  <a href="#online">Select a location type for your masterclass</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          {% endif %}
+          <div class="govuk-form-group {% if validation_error %}govuk-form-group--error{% endif %}">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
                 <h1 class="govuk-fieldset__heading">
                   Which masterclass do you want to run?
                 </h1>
               </legend>
+              {% if validation_error %}
+              <span id="masterclass-type-error" class="govuk-error-message">
+                <span class="govuk-visually-hidden">Error:</span> Select a location type for your masterclass
+              </span>
+              {% endif %}
               <span id="choose-masterclass-hint" class="govuk-hint">
                 Choose a masterclass you have run before or create a new one.
               </span>
